2008-03-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* win32/itpp_acml.vcproj, win32/itpp_mkl.vcproj: Do not treat
	warnings as errors in MSVC++ projects

	This is a workaround for MS Visual C++ Express 2008 problem in
	compiling a correct piece of templated code.

	* itpp/base/algebra/cholesky.h, itpp/base/algebra/det.h,
	itpp/base/algebra/eigen.h, itpp/base/algebra/ls_solve.h,
	itpp/base/algebra/lu.h, itpp/base/algebra/qr.h,
	itpp/base/binary.h, itpp/base/binfile.h, itpp/base/copy_vector.h,
	itpp/base/gf2mat.h, itpp/base/itassert.h, itpp/base/itfile.h,
	itpp/base/ittypes.h, itpp/base/mat.h, itpp/base/sort.h,
	itpp/base/svec.h, itpp/base/vec.h: Minor spelling fixes in IT++
	base module documentation

	This commit fixes several little spelling mistakes in the IT++
	base module documentation.

	Signed-off-by: Kumar Appaiah <akumar@ee.iitm.ac.in>

2008-03-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/ldpc_test.cpp, tests/ldpc_test.ref: Minor workaround for a
	failing ldpc_test on win32 platforms

	MinGW and MSVC++ produce win32 executables, which use slightly
	different rounding approach for real numbers output through cout
	or cerr I/O streams. This patch just changes the precision of the
	output values, so the problematic case does not occur any more.

	* itpp/base/random.cpp, itpp/base/random.h, tests/rand_test.cpp,
	tests/rand_test.ref: Add implementation of Gamma(alpha, beta)
	random number generator

	The implementation of the Gamma_RNG::sample() function is taken
	from the R statistical language.

	Thanks to Vasek Smidl for providing the initial patch in feature
	request [1913411].

	* AUTHORS, doc/local/authors.doc: Add Vasek Smidl to the list of
	contributors

	* itpp/base/operators.cpp: Fix complex constructors in
	operators.cpp to build with g++ 4.3

	It appears that g++ 4.3 is a bit more strict with respect to type
	checking when we attempt to overload the std::complex constructor for